Fix regression on header size due to padding (causing window vertical scrollbar)

--- a/p/themes/Origine-compact/origine-compact.css
+++ b/p/themes/Origine-compact/origine-compact.css
@@ -76,7 +76,8 @@ a.btn,
 	height: 40px;
 }
 
-.header > .item {
+.header > .item,
+.header > .item.title {
 	padding: 0px;
 }
 
